Stop focus state overlapping results

--- a/app/assets/stylesheets/govuk_publishing_components/components/_autocomplete.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_autocomplete.scss
@@ -121,3 +121,7 @@ $app-focus-colour: $govuk-focus-colour;
     }
   }
 }
+
+.autocomplete__menu--visible {
+  padding-top: govuk-spacing(1);
+}
